Traduccion literal pestaña

--- a/PloneSurvey/locales/ca/LC_MESSAGES/plone.po
+++ b/PloneSurvey/locales/ca/LC_MESSAGES/plone.po
@@ -71,7 +71,7 @@ msgid "label_schema_Comment Field"
 msgstr "Camp de commentaris"
 
 #. Default: Email Invite
-msgid "label_schema_Email Invite"
+msgid "label_email_invite"
 msgstr "Invitació per correu"
 
 #. Default: Introduction
