--- a/plone.app.locales/ca/plone.po
+++ b/plone.app.locales/ca/plone.po
@@ -4785,8 +4785,23 @@ msgstr "Seleccioneu el tipus de contingut que voleu afegir a la carpeta."
 
 #. Default: "This search form enables you to find content on the site by specifying one or more search terms. <br /> Remember that you can use the quick search anytime, it's normally good enough, this search form is just if you want to be more specific."
 #: CMFPlone/skins/plone_deprecated/search_form.pt:19
-msgid "description_advanced_search"
-msgstr "Aquest formulari de cerca us permetrà localitzar continguts al portal utilitzant un o més termes de cerca. <br />Recordeu que també podeu utilitzar la cerca ràpida, que normalment us resultarà suficient. Aquest formulari és només per a cerques més específiques."
+msgid "description_custom_advanced_search"
+msgstr "Aquest formulari de cerca us permetrà localitzar continguts al portal utilitzant un o més termes de cerca."
+
+#. Default: "Remember that you can also use the "
+#: CMFPlone/skins/plone_deprecated/search_form.pt:24
+msgid "custom_search_upc_1"
+msgstr "Recordeu que també podeu utilitzar el ""
+
+#. Default: "Search UPC"
+#: CMFPlone/skins/plone_deprecated/search_form.pt:24
+msgid "search_upc"
+msgstr "Cercador UPC"
+
+#. Default: " to search all UPC sites."
+#: CMFPlone/skins/plone_deprecated/search_form.pt:24
+msgid "custom_search_upc_2"
+msgstr " per fer cerques a tots els webs de la UPC.""
 
 #. Default: "If you want to contact this author, fill in the form below."
 #: CMFPlone/skins/plone_content/author.cpt:169
@@ -9319,6 +9334,16 @@ msgstr "No heu trobat el que buscàveu? Utilitzeu la ${advanced_search} per a re
 #: CMFPlone/skins/plone_deprecated/search.pt:64
 msgid "search_results_advanced_link"
 msgstr "cerca avançada"
+
+#. Default: "If you have not found what you are looking for, try the "
+#: CMFPlone/skins/plone_deprecated/search.pt:72
+msgid "search_part1">"
+msgstr "Si no trobeu el que busqueu, proveu amb la "
+
+#. Default: " to refine your search or the <a href="http://cercador.upc.edu">Search UPC</a> to search all of the UPC's websites."
+#: CMFPlone/skins/plone_deprecated/search.pt:76
+msgid "search_part2">"
+msgstr " per a realitzar una cerca més específica o amb el <a href="http://www.upc.edu/cerca"> Cercador UPC</a> per fer cerques a tots els webs de la UPC. "
 
 #. Default: "This link is sent to you from ${portal_url} You are receiving this mail because someone read a page at ${portal_title} and thought it might interest you. It is sent by ${from_address} with the following comment: \"${comment}\" ${document_title} ${document_description} ${document_url}"
 #: CMFPlone/skins/plone_templates/sendto_template.pt:25
