--- a/plone.app.locales/ca/plone.po
+++ b/plone.app.locales/ca/plone.po
@@ -9340,10 +9340,15 @@ msgstr "cerca avançada"
 msgid "search_part1">"
 msgstr "Si no trobeu el que busqueu, proveu amb la "
 
-#. Default: " to refine your search or the <a href="http://cercador.upc.edu">Search UPC</a> to search all of the UPC's websites."
+#. Default: " to refine your search or the "
 #: CMFPlone/skins/plone_deprecated/search.pt:76
 msgid "search_part2">"
-msgstr " per a realitzar una cerca més específica o amb el <a href="http://www.upc.edu/cerca"> Cercador UPC</a> per fer cerques a tots els webs de la UPC. "
+msgstr " per a realitzar una cerca més específica o amb el "
+
+#. Default: " to search all of the UPC's websites."
+#: CMFPlone/skins/plone_deprecated/search.pt:76
+msgid "search_part3">"
+msgstr " per fer cerques a tots els webs de la UPC. "
 
 #. Default: "This link is sent to you from ${portal_url} You are receiving this mail because someone read a page at ${portal_title} and thought it might interest you. It is sent by ${from_address} with the following comment: \"${comment}\" ${document_title} ${document_description} ${document_url}"
 #: CMFPlone/skins/plone_templates/sendto_template.pt:25
