--- a/plone.app.locales/es/plone.po
+++ b/plone.app.locales/es/plone.po
@@ -9342,6 +9342,11 @@ msgstr "Si no encuentra lo que está buscando, pruebe con la"
 msgid "search_part2">"
 msgstr " para refinar su búsqueda o con el <a href="http://www.upc.edu/busqueda">Buscador UPC</a> para buscar en todas las webs de la UPC."
 
+#. Default: " to search all of the UPC's websites."
+#: CMFPlone/skins/plone_deprecated/search.pt:76
+msgid "search_part3">"
+msgstr " para buscar en todas las webs de la UPC."
+
 #. Default: "This link is sent to you from ${portal_url} You are receiving this mail because someone read a page at ${portal_title} and thought it might interest you. It is sent by ${from_address} with the following comment: \"${comment}\" ${document_title} ${document_description} ${document_url}"
 #: CMFPlone/skins/plone_templates/sendto_template.pt:25
 msgid "sendto_mailtemplate_body"
