--- a/plone.app.locales/ca/plone.po
+++ b/plone.app.locales/ca/plone.po
@@ -4791,7 +4791,7 @@ msgstr "Aquest formulari de cerca us permetrà localitzar continguts al portal u
 #. Default: "Remember that you can also use the "
 #: CMFPlone/skins/plone_deprecated/search_form.pt:24
 msgid "custom_search_upc_1"
-msgstr "Recordeu que també podeu utilitzar el ""
+msgstr "Recordeu que també podeu utilitzar el "
 
 #. Default: "Search UPC"
 #: CMFPlone/skins/plone_deprecated/search_form.pt:24
@@ -4801,7 +4801,7 @@ msgstr "Cercador UPC"
 #. Default: " to search all UPC sites."
 #: CMFPlone/skins/plone_deprecated/search_form.pt:24
 msgid "custom_search_upc_2"
-msgstr " per fer cerques a tots els webs de la UPC.""
+msgstr " per fer cerques a tots els webs de la UPC."
 
 #. Default: "If you want to contact this author, fill in the form below."
 #: CMFPlone/skins/plone_content/author.cpt:169
@@ -6761,7 +6761,7 @@ msgid "label_allow_comments"
 msgstr "Permetre comentaris"
 
 #. Default: "Allow Discussion on this item"
-#: widget label of SelectionWidget - description ""
+#: widget label of SelectionWidget - description "
 msgid "label_allow_discussion"
 msgstr "Permet la discussió d'aquest element"
 
@@ -6845,7 +6845,7 @@ msgid "label_biography"
 msgstr "Biografia"
 
 #. Default: "Body Text"
-#: widget label of RichWidget - description ""
+#: widget label of RichWidget - description "
 msgid "label_body_text"
 msgstr "Text del cos"
 
@@ -9337,17 +9337,17 @@ msgstr "cerca avançada"
 
 #. Default: "If you have not found what you are looking for, try the "
 #: CMFPlone/skins/plone_deprecated/search.pt:72
-msgid "search_part1">"
+msgid "search_part1"
 msgstr "Si no trobeu el que busqueu, proveu amb la "
 
 #. Default: " to refine your search or the "
 #: CMFPlone/skins/plone_deprecated/search.pt:76
-msgid "search_part2">"
+msgid "search_part2"
 msgstr " per a realitzar una cerca més específica o amb el "
 
 #. Default: " to search all of the UPC's websites."
 #: CMFPlone/skins/plone_deprecated/search.pt:76
-msgid "search_part3">"
+msgid "search_part3"
 msgstr " per fer cerques a tots els webs de la UPC. "
 
 #. Default: "This link is sent to you from ${portal_url} You are receiving this mail because someone read a page at ${portal_title} and thought it might interest you. It is sent by ${from_address} with the following comment: \"${comment}\" ${document_title} ${document_description} ${document_url}"
