--- a/plone.app.locales/es/plone.po
+++ b/plone.app.locales/es/plone.po
@@ -4775,11 +4775,6 @@ msgstr "Formato de texto plano. Los URLs se convertirán en enlaces."
 msgid "description_add_new_item"
 msgstr "Seleccione el tipo de elemento que desea agregar a su carpeta."
 
-#. Default: "This search form enables you to find content on the site by specifying one or more search terms."
-#: CMFPlone/skins/plone_deprecated/search_form.pt:19
-msgid "description_custom_advanced_search"
-msgstr "Este formulario de búsqueda le permitirá encontrar contenido en el sitio especificando uno o más términos de búsqueda."
-
 #. Default: "Remember that you can also use the "
 #: CMFPlone/skins/plone_deprecated/search_form.pt:24
 msgid "custom_search_upc_1"
@@ -9334,17 +9329,17 @@ msgstr "búsqueda avanzada"
 
 #. Default: "If you have not found what you are looking for, try the "
 #: CMFPlone/skins/plone_deprecated/search.pt:72
-msgid "search_part1">"
+msgid "search_part1"
 msgstr "Si no encuentra lo que está buscando, pruebe con la"
 
-#. Default: " to refine your search or the <a href="http://cercador.upc.edu">Search UPC</a> to search all of the UPC's websites."
+#. Default: " to refine your search or the "
 #: CMFPlone/skins/plone_deprecated/search.pt:76
-msgid "search_part2">"
-msgstr " para refinar su búsqueda o con el <a href="http://www.upc.edu/busqueda">Buscador UPC</a> para buscar en todas las webs de la UPC."
+msgid "search_part2"
+msgstr " para refinar su búsqueda o con el "
 
 #. Default: " to search all of the UPC's websites."
 #: CMFPlone/skins/plone_deprecated/search.pt:76
-msgid "search_part3">"
+msgid "search_part3"
 msgstr " para buscar en todas las webs de la UPC."
 
 #. Default: "This link is sent to you from ${portal_url} You are receiving this mail because someone read a page at ${portal_title} and thought it might interest you. It is sent by ${from_address} with the following comment: \"${comment}\" ${document_title} ${document_description} ${document_url}"
